# E-Commerce

./: .replit  pyproject.toml  replit.md  start.sh
website/: __init__.py  admin.py  auth.py  forms.py  models.py  views.py
website/static/css/: forms.css  style.css
website/template/: base.html  forms.html  home.html  login.html  signup.html
