[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "gunicorn>=25.3.0",
    "pymongo>=4.16.0",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.1",
]
